[package]
name = "monero_client"
version = "0.0.1"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A client for a local or remote Monero instance"
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/monero-client"
repository = "https://github.com/resolvingarchitecture/monero-client"
publish = true
readme = "README.md"
keywords = ["XMR","Monero"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
failure = "0.1.5"
exitfailure = "0.5.1"

monero = "0.6.0"

ra_common = "0.0.43"

[dev-dependencies]
assert_cmd = "0.10"
